--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ h6{
   color: #000000;
 }
 
-p{
+p,
+a{
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 22px;
@@ -30,4 +31,50 @@ p{
 .container{
   max-width: 1140px;
   margin: 0 auto;
+}
+
+.btn-prinary{
+  background-color: #E95A08;
+  color: #fff;
+  font-size: 1em;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  padding: 19px 80px;
+  border: 2px solid #E95A08;
+}
+
+.btn-prinary:hover{
+  background-color: #fff;
+  color: #E95A08;
+}
+.display-flex{
+  display: flex;
+}
+
+/* nav area style */
+
+.main-nav{
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.nav-link{
+  list-style: none;
+}
+.nav-link li{
+  margin-right: 30px;
+}
+.nav-link li a{
+  text-decoration: none;
+  font-weight: 600;
+}
+.nav-link a:hover{
+  color: #000000;
+}
+.cart-icon span{
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+  color: #000000;
 }
