--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,6 +32,22 @@
  .btn-prinary{
   padding: 19px 42px;
  }
+ /* Flower & Plants Lover */
+ .plants-lover{
+  flex-direction: column;
+ }
+ .right-side-textarea{
+  margin: 20px;
+ }
+ .right-side-textarea h2{
+  font-size: 40px;
+ }
+  .left-image-area{
+  margin: 20px;
+  }
+ .left-image-area img{
+  width: 99%;
+ }
 }
 
 
@@ -58,5 +74,19 @@
   justify-content: center;
   flex-wrap: wrap;
 }
+ /* Flower & Plants Lover */
 
+ .plants-lover{
+  flex-direction: column;
+ }
+ .right-side-textarea{
+  margin: 30px;
+ }
+
+ .left-image-area{
+  margin: 20px;
+ }
+ .left-image-area img{
+  width: 99%;
+ }
 }
