--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,20 +18,27 @@
   .left-banner-area p{
     font-size: 18px;
   }
+
+
   /* our plants area */
   .plants{
   margin: 50px auto;
-  gap: 20px;
   display: flex;
+  flex-wrap: wrap;       
   justify-content: center;
-  flex-wrap: wrap;
+  gap: 20px; 
+ }
+ .plant-card{
+  flex-basis: calc(40% - 10px);
  }
  .plant-card img{
   max-width: 200px;
  }
  .btn-prinary{
-  padding: 19px 42px;
+  padding: 19px 43px;
  }
+
+
  /* Flower & Plants Lover */
  .plants-lover{
   flex-direction: column;
@@ -39,8 +46,9 @@
  .right-side-textarea{
   margin: 20px;
  }
- .right-side-textarea h2{
-  font-size: 40px;
+.plants-lover .right-side-textarea  h2,
+.deals h2{
+  font-size: 35px;
  }
   .left-image-area{
   margin: 20px;
@@ -48,6 +56,33 @@
  .left-image-area img{
   width: 99%;
  }
+
+
+ /* Flower & Plants Lover style */
+ .trusted-badge img{
+  display: none;
+ }
+ /* Latest  Deals style */
+.deals p{
+  font-size: 22px;
+}
+/* Join the colorful Bunch Start */
+#join-section{
+  padding: 80px;
+}
+#join-section h2{
+  font-size: 30px;
+}
+
+
+#join-section .subscribe-area input{
+  width: 218px;
+  padding: 21.8px 20px;
+  outline: none;
+}
+#join-section .subscribe-area button{
+   padding: 19px 25px;
+}
 }
 
 
@@ -57,6 +92,7 @@
 
 
 @media screen and (min-width:576px) and (max-width:992px){
+  /* Header Style */
   .main-nav, .banner{
     flex-direction: column;
   }
@@ -74,6 +110,8 @@
   justify-content: center;
   flex-wrap: wrap;
 }
+
+
  /* Flower & Plants Lover */
 
  .plants-lover{
@@ -89,4 +127,9 @@
  .left-image-area img{
   width: 99%;
  }
+ /* Join the colorful Bunch Start */
+#join-section{
+  padding: 100px;
+}
+
 }
