added footer section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,8 +73,6 @@
 #join-section h2{
   font-size: 30px;
 }
-
-
 #join-section .subscribe-area input{
   width: 218px;
   padding: 21.8px 20px;
@@ -83,6 +81,21 @@
 #join-section .subscribe-area button{
    padding: 19px 25px;
 }
+/* footer area  */
+ footer {
+  margin: 20px;
+  flex-direction: column;
+}
+#footer-text{
+  margin-bottom: 20px;
+}
+.footer-logo-area{
+  margin: 20px 0;
+}
+.footer-link li{
+  margin-left: 0px;
+}
+
 }
 
 
@@ -95,6 +108,9 @@
   /* Header Style */
   .main-nav, .banner{
     flex-direction: column;
+  }
+  .banner .image-area img{
+    display: none;
   }
   .nav-logo{
     margin-bottom: 30px;
@@ -131,5 +147,21 @@
 #join-section{
   padding: 100px;
 }
-
+/* footer area  */
+ footer {
+  margin: 30px;
+  flex-direction: column;
+}
+#footer-text{
+  margin-bottom: 20px;
+}
+.footer-logo-area{
+  margin: 20px 0;
+}
+.footer-link li{
+  margin-left: 0px;
+}
+footer #footer-text{
+  max-width: 80%;
+}
 }
